--- a/teliko2.html
+++ b/teliko2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 <style>
 table,th,td {
   border : 1px solid black;
